--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,11 @@
   "autoload": {
     "psr-4": {"App\\": "src/"}
   },
+  "autoload-dev": {
+    "psr-4": {
+      "App\\Tests\\" : "tests/"
+    }
+  },
   "require-dev": {
     "phpunit/phpunit": "^9.5"
   }
